5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_1559.log
== TEST (2019-04-01 00:34:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase.))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:34:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:34:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:34:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:34:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.159898
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:34:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:34:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.111483
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:34:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:36:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.
                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:36:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- EXECUTION TIME:
0.13926
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.
                                                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:36:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.
                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:37:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:37:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.162944
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
